[project]
name = "rankanalysis"
version = "0.1.0"
description = "Effective Rank Analysis of Open-Source LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
    "accelerate>=1.0.0",
    "scipy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
